--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
         <variable name="activity" type="com.databindingexample.MainActivity"/>
     </data>
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -51,5 +52,5 @@
             android:textSize="16sp"
             android:text="@{user.email}"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
